Keying Set - Description edit box disabled, for internal use only #61010

Closed
opened 2019-01-30 11:09:55 +01:00 by Reiner Prokein · 11 comments

System Information
Operating system: Win 7 home
Graphics card: 1060

Blender Version
Broken: Blender 2.8 Beta
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional)

Short description of error

The Description edit box for a new created keying set is disabled.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

Open Blender. In Properties Editor go to Scene. Open the Keying Sets tab and create a new keying set.

The Description edit box will appear. But it is not editable. Means you can't add a description to your new keying set. And there is nothing to read since you can't add a description to your new keying set.

keyingsetdescription.jpg

**System Information** Operating system: Win 7 home Graphics card: 1060 **Blender Version** Broken: Blender 2.8 Beta (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) **Short description of error** The Description edit box for a new created keying set is disabled. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). Open Blender. In Properties Editor go to Scene. Open the Keying Sets tab and create a new keying set. The Description edit box will appear. But it is not editable. Means you can't add a description to your new keying set. And there is nothing to read since you can't add a description to your new keying set. ![keyingsetdescription.jpg](https://archive.blender.org/developer/F6452249/keyingsetdescription.jpg)
Author

Added subscriber: @tiles

Added subscriber: @tiles

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB

@brecht I'm unsure how this is supposed to work. Is this a bug or not? It's the same in 2.79 and the tooltip seems to indicate that this is intended.

@brecht I'm unsure how this is supposed to work. Is this a bug or not? It's the same in 2.79 and the tooltip seems to indicate that this is intended.

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung

I'm not sure what this property is supposed to do. bl_ properties are intended to be defined by Python classes, I don't know why this is in the UI.

@JoshuaLeung, do you know what this is supposed to do?

I'm not sure what this property is supposed to do. `bl_` properties are intended to be defined by Python classes, I don't know why this is in the UI. @JoshuaLeung, do you know what this is supposed to do?
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

Hmm... I didn't really recall adding this. A quick git blame shows that it was introduced in a80b7d6129 by @mont29

I agree this could be useful functionality to have, so we could just rename the KeyingSet.bl_description RNA property to KeyingSet.description (i.e. dropping the prefix). That shouldn't break the Python-defined KeyingSets registration (since that uses the KeyingSetInfo struct instead)

Hmm... I didn't really recall adding this. A quick git blame shows that it was introduced in a80b7d6129 by @mont29 I agree this could be useful functionality to have, so we could just rename the `KeyingSet.bl_description` RNA property to `KeyingSet.description` (i.e. dropping the prefix). That shouldn't break the Python-defined KeyingSets registration (since that uses the `KeyingSetInfo` struct instead)
Bastien Montagne was assigned by Brecht Van Lommel 2019-01-31 17:01:44 +01:00

Seems reasonable.

Seems reasonable.

Naming is indeed rather wrong here… but this is not the reason of the problem, it's a stupid mistake in prop flags. I'd rather not change name for now, will just fix the actual issue.

Naming is indeed rather wrong here… but this is not the reason of the problem, it's a stupid mistake in prop flags. I'd rather not change name for now, will just fix the actual issue.

This issue was referenced by 81fc55f563

This issue was referenced by 81fc55f563a909e4011bd4dc4c078ab292be3a17

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61010
No description provided.