Fix T61010: Keying Set - Description edit box disabled, for internal use only.

Wrong property flag for that one, KeyingSet is a regular RNA class, not
a registrable 'interface' one, unlike KeyingSetInfo...